refactor(backend:user): 优化了UserProfile持久层的一些问题